Update top-level overview diagram

--- a/meeting_notes/meeting_17_01_2025.md
+++ b/meeting_notes/meeting_17_01_2025.md
@@ -4,6 +4,7 @@
 - Wolfram Martens
 ## Software management/repository
 - Should we continue using Github? or use Gitlab (tudelft)?
+    - Comment Riccardo: DTU gitlab?
 - What are options to reveal only "mature enough" code? (hidden branches etc.)
 - For now, we find it attractive to maintain code and documentation at the same location (currently this repo)
 - Maybe use confluence for documentation?
